<resources>
    <string name="app_name">GenovaGreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="rifiuti_pericolosi">Rifiuti pericolosi</string>
    <string name="spedizioni">Spedizioni</string>
    <string name="contatti">Contatti</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="home">Home</string>
    <string name="dove_lo_butto">Dove lo butto?</string>
    <string name="genovagreen">GenovaGreen</string>
    <string name="Open">aaa</string>
    <string name="Close">aaa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
